--- a/src/app/MyComponent/main/main.component.html
+++ b/src/app/MyComponent/main/main.component.html
@@ -1,13 +1,15 @@
 <div class="container">
     <div class="upper-middle-section">
-        <div class="box" id="box1">Models</div>
+        <div class="box" id="box1">Models <app-pie></app-pie> </div>
         <div class="icon"><img src="https://icon-library.com/images/right-arrow-icon/right-arrow-icon-8.jpg" width="40" height="40" alt="arrow"></div>
-        <div class="box" id="box2">Graphs</div>
+        <div class="box" id="box2"><app-line></app-line></div>
     </div>
     <div class="lower-middle-section">
         <div class="bigbox">
             <div class="whitebox">
-                <p>Users</p>
+                <div id="titleInsideWhiteBox">
+                    <p>Users</p>
+                </div>
             </div>
         </div>
     </div>    
